fix: opacity transition bug on safari

--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,6 @@
 
 * {
   -webkit-tap-highlight-color: transparent;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
